--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -14,6 +14,12 @@
     <td>
       <%= link_to("EDIT", edit_admin_job_path(job))%> |
       <%= link_to("DELETE", admin_job_path(job), :method => :delete, :data => { :confirm => "Are you sure? "})%>
+
+      <% if job.is_hidden %>
+        <%= link_to("Publish", publish_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default" )%>
+      <% else %>
+        <%= link_to("Hide", hide_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-default") %>
+      <% end %>
     </td>
     <td>
       <%= job.created_at %>
