--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -5,11 +5,29 @@
 <br><br>
 
 <table class="table table-bordered">
+    <thead>
+      <td>職缺</td>
+      <td>收到履歷數量</td>
+      <td>薪資上限</td>
+      <td>薪資下限</td>
+      <td>管理選項</td>
+      <td>刊登時間</td>
+    </thead>
+
   <% @jobs.each do |job| %>
   <tr>
     <td>
       <%= render_job_status(job) %>
       <%= link_to(job.title, admin_job_path(job))%>
+    </td>
+    <td>
+      <%= link_to(job.resumes.count, admin_job_resumes_path(job) ) %>
+    </td>
+    <td>
+      <%= job.wage_lower_bound %>
+    </td>
+    <td>
+      <%= job.wage_upper_bound%>
     </td>
     <td>
       <%= link_to("EDIT", edit_admin_job_path(job))%> |
